add google forms

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 	<head>
 	    <!-- Meta, title, CSS, favicons, etc. -->
@@ -6,46 +6,34 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="">
 		<meta name="author" content="">
-	
 		<title>
-		  
 		    Promo
-		  
 		</title>
-	
-		<!-- Bootstrap core CSS -->
 		<link href="assets/css/bootstrap.min.css" rel="stylesheet">
-		
 		<!-- Fonts -->
 		<link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,700,400italic,700italic' rel='stylesheet' type='text/css'>
-		
 		<!-- Rocket extras -->
 		<link href="assets/css/animate.css" rel="stylesheet">
 		<link href="assets/css/prettyPhoto.css" rel="stylesheet">
 		<link href="assets/css/style.css" rel="stylesheet">
 		<!--[if lt IE 9]><script src="assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-		
 		<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 		<!--[if lt IE 9]>
 		  <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
 		  <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
 		<![endif]-->
-		
 		<!-- Favicons -->
 		<link rel="shortcut icon" href="../assets/favicon.png">
 	</head>
 	<body>
-	
 	<!-- Start Rocket -->
 	<!-- ********************* -->
-	
 	<!-- Parallax Background
 	================================================== -->
 	<!-- image is set in the CSS as a background image -->
 	<div id="parallax"></div>
 	<!-- End Parallax Background
 	================================================== -->
-	
 	<!-- Start Header
 	================================================== -->
 	<header id="header" class="navbar navbar-inverse navbar-fixed-top" role="banner">
@@ -425,16 +413,23 @@
 			<div class="row">
 				<div class="col-md-12">
 					<div class="overview">
-						<h1><strong>Subscribe Newsletter</strong></h1>
-						<p class="lead">Join thousands of awesome people, there's only one thing to do. Subscribe !</p>
+						<h1><strong>Más Información</strong></h1>
+						<p class="lead">!</p>
 					</div>
-					<form role="form">
-						<div class="input-group">
-			            	<input type="text" class="form-control input-lg" placeholder="Enter email">
-			            	<span class="input-group-btn">
-			              		<button class="btn btn-lg btn-default" type="button">Subscribe Me</button>
-			            	</span>
-			          	</div>
+                    <!-- https://docs.google.com/forms/d/e/1FAIpQLSdNF2kQs_02LmCESjw-_Y9yeGX_P0Ezbs_dbiuePtBEh_PFPw/viewform?entry.1383318270=aaa@aaa.cl&entry.1808555222=asas&entry.1083755487=asas-mmmm -->
+					<form role="form" action="https://docs.google.com/forms/d/e/1FAIpQLSdNF2kQs_02LmCESjw-_Y9yeGX_P0Ezbs_dbiuePtBEh_PFPw/viewform" method="get">
+                        <div class="form-group">
+                            <input type="text" class="form-control input-lg" placeholder="Nombre Completo" name="entry.1808555222">
+                        </div>
+                        <div class="form-group">
+                            <input type="text" class="form-control input-lg" placeholder="Institución" name="entry.1083755487">
+                        </div>
+                        <div class="input-group">
+                            <input type="email" class="form-control input-lg" placeholder="email" name="entry.1383318270">
+                            <span class="input-group-btn">
+                                <button class="btn btn-lg btn-default" type="submit">Inscribir</button>
+                            </span>
+                        </div>
 		          	</form>
 				</div>
 			</div>
