--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 	        <span class="icon-bar"></span>
 	      </button>
 	      <!-- Your Logo -->
-	      <a href="../" class="navbar-brand">Promo</a>
+	      <a href="../" class="navbar-brand">&nbsp;</a>
 	    </div>
 	    <!-- Start Navigation -->
 	    <nav class="collapse navbar-collapse bs-navbar-collapse navbar-right" role="navigation">
