--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="">
 		<meta name="author" content="">
-		<title>
-		    CEOsim
-		</title>
+		<title>CEOsim</title>
 		<link href="assets/css/bootstrap.min.css" rel="stylesheet">
 		<!-- Fonts -->
 		<link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,700,400italic,700italic' rel='stylesheet' type='text/css'>
@@ -23,7 +21,23 @@
 		  <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
 		<![endif]-->
 		<!-- Favicons -->
-		<link rel="shortcut icon" href="assets/favicon.png">
+		<link rel="apple-touch-icon" sizes="57x57" href="assets/fav/apple-icon-57x57.png">
+		<link rel="apple-touch-icon" sizes="60x60" href="assets/fav/apple-icon-60x60.png">
+		<link rel="apple-touch-icon" sizes="72x72" href="assets/fav/apple-icon-72x72.png">
+		<link rel="apple-touch-icon" sizes="76x76" href="assets/fav/apple-icon-76x76.png">
+		<link rel="apple-touch-icon" sizes="114x114" href="assets/fav/apple-icon-114x114.png">
+		<link rel="apple-touch-icon" sizes="120x120" href="assets/fav/apple-icon-120x120.png">
+		<link rel="apple-touch-icon" sizes="144x144" href="assets/fav/apple-icon-144x144.png">
+		<link rel="apple-touch-icon" sizes="152x152" href="assets/fav/apple-icon-152x152.png">
+		<link rel="apple-touch-icon" sizes="180x180" href="assets/fav/apple-icon-180x180.png">
+		<link rel="icon" type="image/png" sizes="192x192"  href="assets/fav/android-icon-192x192.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="assets/fav/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="96x96" href="assets/fav/favicon-96x96.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="assets/fav/favicon-16x16.png">
+		<link rel="manifest" href="assets/fav/manifest.json">
+		<meta name="msapplication-TileColor" content="#ffffff">
+		<meta name="msapplication-TileImage" content="assets/fav/ms-icon-144x144.png">
+		<meta name="theme-color" content="#872123">
 	</head>
 	<body>
 	<!-- Start Rocket -->
@@ -58,10 +72,9 @@
 	          <a href="#features">Características</a>
 	        </li>
 	      </ul>
-
 	      <ul class="nav navbar-nav navbar-right header-button">
 	        <li>
-	          <button type="button" class="btn btn-primary">¡Quiero ser CEO!</button>
+	          <button type="button" class="btn btn-default">¡Quiero ser CEO!</button>
 	        </li>
 	      </ul>
 	    </nav>
