--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<!-- Meta, title, CSS, favicons, etc. -->
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="">
+		<meta name="description" content="Dirige a tu equipo, selecciona estrategias ganadoras para batir a la competencia y lleva a tu empresa a lo más alto.">
 		<meta name="author" content="">
 		<title>CEOsim</title>
 		<link href="assets/css/bootstrap.min.css" rel="stylesheet">
@@ -40,33 +40,21 @@
 		<meta name="theme-color" content="#872123">
 	</head>
 	<body>
-	<!-- Start Rocket -->
-	<!-- ********************* -->
-	<!-- Parallax Background
-	================================================== -->
-	<!-- image is set in the CSS as a background image -->
-	<!--div id="parallax"></div-->
-	<!-- End Parallax Background
-	================================================== -->
-	<!-- Start Header
-	================================================== -->
 	<header id="header" class="navbar navbar-inverse navbar-fixed-top" role="banner">
 	  <div class="container">
 	    <div class="navbar-header">
 	      <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse">
-	        <span class="sr-only">Toggle navigation</span>
+	        <span class="sr-only">Mostrar Navegación</span>
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>
 	      </button>
-	      <!-- Logo -->
-	      <a href="." class="navbar-brand">&nbsp;</a>
+	      <a href="http://ceosim.cl" class="navbar-brand">&nbsp;</a>
 	    </div>
-	    <!-- Start Navigation -->
 	    <nav class="collapse navbar-collapse bs-navbar-collapse navbar-right" role="navigation">
 	      <ul class="nav navbar-nav">
 	        <li>
-	          <a href="#hero">Home</a>
+	          <a href="#inicio">Inicio</a>
 	        </li>
 	        <li>
 	          <a href="#features">Características</a>
@@ -80,12 +68,7 @@
 	    </nav>
 	  </div>
 	</header>
-	<!-- ==================================================
-	End Header -->
-	
-	<!-- Start Hero Section
-	================================================== -->
-	<section id="hero" class="section">
+	<section id="inicio" class="section">
 		<div class="container">
 			<div class="row text-center">
 				<h1>¡Conviértete en un CEO!</h1>
@@ -115,7 +98,7 @@
 				<div class="col-md-12">
 					<!-- Title -->
 					<div class="overview animate" data-animate="flipInX">
-						<p class="lead">Podrás elaborar estrategias en las siguientes áreas:</p>
+						<h2 class="lead">Podrás elaborar estrategias en las siguientes áreas:</h2>
 					</div>
 				</div>
 				<div class="col-md-3 col-sm-6">
@@ -156,7 +139,7 @@
 
 			<div class="col-md-12 text-center" style="margin-top: 2em">
 				<p class="lead">
-					<strong>¡Juega CEOsim!</strong>
+					<strong>Próximanente</strong>
 					<img src="assets/images/ceosim_c.png" alt="Logo" style="width:100px;vertical-align:middle">
 				</p>
 			</div>
@@ -188,7 +171,7 @@
 						<button class="btn btn-md btn-default">Purchase Now</button>
 					</div>
 				</div>
-			</div-->
+			</div>
 		</div>
 	</section>
 	
