--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
 			<div class="col-md-12 text-center" style="margin-top: 2em">
 				<p class="lead">
-					<strong>Próximanente</strong>
+					<strong>Próximamente</strong>
 					<img src="assets/images/ceosim_c.png" alt="Logo" style="width:100px;vertical-align:middle">
 				</p>
 			</div>
