colores a elementos a a:hover

--- a/index.html
+++ b/index.html
@@ -118,16 +118,18 @@
       		</div>
         </div>
     </section>
-    <hr>
     <section class="section" style="background-color:#742628">
 		<div class="container">
 			<div class="row text-center">
 				<p class="lead" style="color:#FFF">Síguenos en nuestrar redes sociales, entérate de las novedades y entrena para la competencia</p>
-  			<p><a href="#"><i class="fa fa-facebook-official fa-3x" aria-hidden="true"></i></a> <a href="#"><i class="fa fa-twitter fa-3x" aria-hidden="true"></i></a> <a href="#"><span class="fa fa-youtube-play fa-3x" aria-hidden="true"></span></a></p>
+				<ul class="list-inline">
+  					<li><a href="#"><i class="fa fa-facebook-official fa-3x" aria-hidden="true"></i></a></li>
+  					<li><a href="#"><i class="fa fa-twitter fa-3x" aria-hidden="true"></i></a></li>
+  					<li><a href="#"><span class="fa fa-youtube-play fa-3x" aria-hidden="true"></span></a></li>
+				</ul>
 			</div>
 		</div>
 	</section>
-    <hr>
     <section>
         <div class="container">
 			<div class="row">
