--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 		<meta name="author" content="">
 		<title>CEOsim</title>
 		<link href="assets/css/bootstrap.min.css" rel="stylesheet">
-		<!-- Font-->
+		<!-- / Font-->
 		<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-		<!-- Iconos-->
+		<!-- / Iconos-->
 		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-		<!-- Personalizaciones-->
+		<!-- / Personalizaciones-->
 		<link href="assets/css/style.css" rel="stylesheet">
 		<!--[if lt IE 9]><script src="assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
 		<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -19,8 +19,8 @@
 		  <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
 		  <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
 		<![endif]-->
-		<!-- Favicons -->
-		<!-- Apple-- >
+		<!-- Favicons-->
+		<!-- Apple-->
 		<link rel="apple-touch-icon" sizes="57x57" href="assets/fav/apple-icon-57x57.png">
 		<link rel="apple-touch-icon" sizes="60x60" href="assets/fav/apple-icon-60x60.png">
 		<link rel="apple-touch-icon" sizes="72x72" href="assets/fav/apple-icon-72x72.png">
@@ -36,11 +36,11 @@
 		<link rel="icon" type="image/png" sizes="96x96" href="assets/fav/favicon-96x96.png">
 		<!-- Basico-->
 		<link rel="icon" type="image/png" sizes="16x16" href="assets/fav/favicon-16x16.png">
-		<!-- Para Pinear web como aplicacion en Windows 7 - 10 -->
+		<!-- Para Pinear web como aplicacion en Windows 7-10-->
 		<link rel="manifest" href="assets/fav/manifest.json">
 		<meta name="msapplication-TileColor" content="#ffffff">
 		<meta name="msapplication-TileImage" content="assets/fav/ms-icon-144x144.png">
-		<!-- Barra de color en Chrome para android -->
+		<!-- Barra de color en Chrome para android-->
 		<meta name="theme-color" content="#872123">
 	</head>
 	<body>
