--- a/index.html
+++ b/index.html
@@ -93,25 +93,25 @@
 	</section>
 	<section id="features" class="section">
 		<div class="container">
-		    <h2 class="text-center">Podrás elaborar estrategias en las siguientes áreas:</h2>
+		    <h2 class="text-center page-header" style="margin-bottom: 2em;">Podrás elaborar estrategias en las siguientes áreas:</h2>
 			<div class="row text-center">
         		<div class="col-lg-3">
-          			<img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+           			<img class="img-circle" src="assets/images/comercial.png" alt="Estrategia Comercial" width="140" height="140">
           			<h3>Comercial</h3>
           			<p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
         		</div><!-- /.col-lg-4 -->
         		<div class="col-lg-3">
-          			<img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+          			<img class="img-circle" src="assets/images/produccion.png" alt="Estrategia de Producción" width="140" height="140">
           			<h3>Producción</h3>
           			<p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
         		</div><!-- /.col-lg-4 -->
        			<div class="col-lg-3">
-          			<img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+          			<img class="img-circle" src="assets/images/financiera.png" alt="Estrategia Financiera" width="140" height="140">
           			<h3>Finanzas</h3>
           			<p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
         		</div><!-- /.col-lg-4 -->
        			<div class="col-lg-3">
-          			<img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+          			<img class="img-circle" src="assets/images/id.png" alt="Estrategia de i+d" width="140" height="140">
           			<h3>I+D</h3>
           			<p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
         		</div><!-- /.col-lg-4 -->
