Cambiar video y desc bajo íconos

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2">
 					<div class="embed-responsive embed-responsive-16by9">
-						<iframe src="https://www.youtube.com/embed/0vrdgDdPApQ" class="embed-responsive-item" frameborder="0" allowfullscreen></iframe>
+						<iframe src="https://www.youtube-nocookie.com/embed/JVTupiVprQY?rel=0&amp;showinfo=0" class="embed-responsive-item" frameborder="0" allowfullscreen></iframe>
 					</div>
 				</div>
 			</div>
@@ -104,24 +104,24 @@
 			<h2 class="text-center page-header" style="margin-bottom: 2em;">Podrás elaborar estrategias en las siguientes áreas:</h2>
 			<div class="row text-center">
 				<div class="col-lg-3">
-					<img class="img-circle" src="assets/images/comercial.png" alt="Estrategia Comercial" width="140" height="140">
+					<img class="img-circle" src="assets/images/comercial.png" alt="Estrategia Comercial">
 					<h3>Comercial</h3>
-					<p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+					<p>Podrás crear tus estrategias de marketing, elaborar pronósticos de ventas, fijar el precio de los productos, generar presupuestos de promoción y distribución.</p>
 				</div><!-- /.col-lg-4 -->
 				<div class="col-lg-3">
-					<img class="img-circle" src="assets/images/produccion.png" alt="Estrategia de Producción" width="140" height="140">
+					<img class="img-circle" src="assets/images/produccion.png" alt="Estrategia de Producción">
 					<h3>Producción</h3>
-					<p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+					<p>Programa el número de productos que su empresa fabricará según el pronostico de ventas, gestiona los stock de inventarios y la capacidad de fabrica.</p>
 				</div><!-- /.col-lg-4 -->
 				<div class="col-lg-3">
-					<img class="img-circle" src="assets/images/financiera.png" alt="Estrategia Financiera" width="140" height="140">
+					<img class="img-circle" src="assets/images/financiera.png" alt="Estrategia Financiera">
 					<h3>Finanzas</h3>
-					<p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+					<p>Se asegura que la empresa tenga los fondos monetarios para operar, controla la liquidez de la empresa y si es necesario gestiona los prestamos bancarios para financiamiento, además, fija las políticas de cuentas por cobrar y cuentas por pagar.</p>
 				</div><!-- /.col-lg-4 -->
 				<div class="col-lg-3">
-					<img class="img-circle" src="assets/images/id.png" alt="Estrategia de i+d" width="140" height="140">
+					<img class="img-circle" src="assets/images/id.png" alt="Estrategia de I+D">
 					<h3>I+D</h3>
-					<p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+					<p>En este departamento podrás establecer presupuestos para todas las mejoras al producto, las cuales te llevarán a posicionar un producto atractivo para el mercado.</p>
 				</div><!-- /.col-lg-4 -->
 			</div>
 		</div>
