Activar links a formulario

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 	      </ul>
 	      <ul class="nav navbar-nav navbar-right header-button">
 	        <li>
-	          <button type="button" class="btn btn-default">¡Quiero ser un CEO!</button>
+	          <button type="button" class="btn btn-default" onclick="window.open('https://goo.gl/forms/ri0RYAbp9lqlfvew1', '_blank')">¡Quiero ser un CEO!</button>
 	        </li>
 	      </ul>
 	    </nav>
@@ -94,7 +94,7 @@
 	<section class="section" style="background-color:#742628">
 		<div class="container">
 			<div class="row text-center">
-				<p><a class="btn btn-primary btn-lg" role="button">Quiero ser un CEO</a></p>
+				<p><a class="btn btn-primary btn-lg" role="button" href="https://goo.gl/forms/ri0RYAbp9lqlfvew1" target="_blank">Quiero ser un CEO</a></p>
 				<p class="lead" style="color:#FFF">Regístrate y sé el primero en recibir nuestra notificación para descargar la app gratis</p>
 			</div>
 		</div>
