Cambiar imágenes de características

--- a/index.html
+++ b/index.html
@@ -101,25 +101,25 @@
 	</section>
 	<section id="features" class="section">
 		<div class="container">
-			<h2 class="text-center page-header" style="margin-bottom: 2em;">Podrás elaborar estrategias en las siguientes áreas:</h2>
+			<h2 class="text-center page-header">Podrás elaborar estrategias en las siguientes áreas:</h2>
 			<div class="row text-center">
 				<div class="col-lg-3">
-					<img class="img-circle" src="assets/images/comercial.png" alt="Estrategia Comercial">
+					<img class="img-icon" src="assets/images/f_comercial.png" alt="Estrategia Comercial">
 					<h3>Comercial</h3>
 					<p>Podrás crear tus estrategias de marketing, elaborar pronósticos de ventas, fijar el precio de los productos, generar presupuestos de promoción y distribución.</p>
 				</div><!-- /.col-lg-4 -->
 				<div class="col-lg-3">
-					<img class="img-circle" src="assets/images/produccion.png" alt="Estrategia de Producción">
+					<img class="img-icon" src="assets/images/f_produccion.png" alt="Estrategia de Producción">
 					<h3>Producción</h3>
 					<p>Programa el número de productos que su empresa fabricará según el pronostico de ventas, gestiona los stock de inventarios y la capacidad de fabrica.</p>
 				</div><!-- /.col-lg-4 -->
 				<div class="col-lg-3">
-					<img class="img-circle" src="assets/images/financiera.png" alt="Estrategia Financiera">
+					<img class="img-icon" src="assets/images/f_financiera.png" alt="Estrategia Financiera">
 					<h3>Finanzas</h3>
 					<p>Se asegura que la empresa tenga los fondos monetarios para operar, controla la liquidez de la empresa y si es necesario gestiona los prestamos bancarios para financiamiento, además, fija las políticas de cuentas por cobrar y cuentas por pagar.</p>
 				</div><!-- /.col-lg-4 -->
 				<div class="col-lg-3">
-					<img class="img-circle" src="assets/images/id.png" alt="Estrategia de I+D">
+					<img class="img-icon" src="assets/images/f_id.png" alt="Estrategia de I+D">
 					<h3>I+D</h3>
 					<p>En este departamento podrás establecer presupuestos para todas las mejoras al producto, las cuales te llevarán a posicionar un producto atractivo para el mercado.</p>
 				</div><!-- /.col-lg-4 -->
