--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 					<p>Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
 				</div>
 				<div class="col-md-7">
-					<img class="img-responsive center-block" alt="800x500" src="https://placehold.it/800x500">
+					<img class="img-responsive center-block" alt="800x500" src="assets/images/desc_enfrenta.png">
 				</div>
 			</div>
 			<hr>
@@ -144,7 +144,7 @@
 					<p>Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
 				</div>
 				<div class="col-md-7 col-md-pull-5">
-					<img class="img-responsive center-block" alt="800x500" src="https://placehold.it/800x500">
+					<img class="img-responsive center-block" alt="800x500" src="assets/images/desc_compite.png">
 				</div>
 			</div>
 			<hr>
@@ -154,7 +154,7 @@
 					<p>Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
 				</div>
 				<div class="col-md-7">
-					<img class="img-responsive center-block" alt="800x500" src="https://placehold.it/800x500">
+					<img class="img-responsive center-block" alt="800x500" src="assets/images/desc_lider.png">
 				</div>
 			</div>
 		</div>
