--- a/index.html
+++ b/index.html
@@ -126,39 +126,16 @@
 			</div>
 		</div>
 	</section>
-	<section>
-		<div class="container">
-			<div class="row">
-				<div class="col-md-5">
-					<h2>Enfrenta las dificultades de dirigir una empresa <span class="text-muted">en distintos mercados y situaciones.</span></h2>
-					<p>Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-				</div>
-				<div class="col-md-7">
-					<img class="img-responsive center-block" alt="800x500" src="assets/images/desc_enfrenta.png">
-				</div>
-			</div>
-			<hr>
-			<div class="row">
-				<div class="col-md-5 col-md-push-7">
-					<h2>Compite <span class="text-muted">con otros usuarios.</span></h2>
-					<p>Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-				</div>
-				<div class="col-md-7 col-md-pull-5">
-					<img class="img-responsive center-block" alt="800x500" src="assets/images/desc_compite.png">
-				</div>
-			</div>
-			<hr>
-			<div class="row">
-				<div class="col-md-5">
-					<h2>Y sé el <strong>líder</strong> de tu comunidad.</h2>
-					<p>Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-				</div>
-				<div class="col-md-7">
-					<img class="img-responsive center-block" alt="800x500" src="assets/images/desc_lider.png">
-				</div>
-			</div>
-		</div>
-	</section>
+	<div class="container text-center">
+		<h2>Enfrenta las dificultades de dirigir una empresa <span class="text-muted">en distintos mercados y situaciones.</span></h2><br>
+		<img class="img-responsive center-block" alt="800x500" src="assets/images/desc_enfrenta.png"><br>
+
+		<h2>Compite <span class="text-muted">con otros usuarios.</span></h2><br>
+		<img class="img-responsive center-block" alt="800x500" src="assets/images/desc_compite.png"><br>
+
+		<h2>Y sé el <strong>líder</strong> de tu comunidad.</h2><br>
+		<img class="img-responsive center-block" alt="800x500" src="assets/images/desc_lider.png"><br>
+	</div>
 	<section class="section" id="social">
 		<div class="container">
 			<div class="row text-center">
