--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 	</div>
 	<hr>
 	<footer class="container">
-		<p class="pull-left">© 2016 Ceosim SPA</p>
+		<p class="pull-left">© 2016 Ceosim SpA</p>
 		<ul class="nav nav-pills pull-right">
   			<li><a href="#"><i class="fa fa-facebook-official" aria-hidden="true"></i></a></li>
   			<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
