--- a/index.html
+++ b/index.html
@@ -141,9 +141,9 @@
 			<div class="row text-center">
 				<p class="lead">Síguenos en nuestrar redes sociales, entérate de las novedades y entrena para la competencia</p>
 				<ul class="list-inline">
-  					<li><a href="#"><i class="fa fa-facebook-official fa-3x" aria-hidden="true"></i></a></li>
-  					<li><a href="#"><i class="fa fa-twitter fa-3x" aria-hidden="true"></i></a></li>
-  					<li><a href="#"><span class="fa fa-youtube-play fa-3x" aria-hidden="true"></span></a></li>
+  					<li><a href="https://www.facebook.com/ceosim.cl/" target="_blank"><i class="fa fa-facebook-official fa-3x" aria-hidden="true"></i></a></li>
+  					<li><a href="https://twitter.com/CEOsim_Chile" target="_blank"><i class="fa fa-twitter fa-3x" aria-hidden="true"></i></a></li>
+  					<li><a href="https://www.youtube.com/channel/UC1C8wXqh3Mx_8Jm4WHG6-Yg" target="_blank"><span class="fa fa-youtube-play fa-3x" aria-hidden="true"></span></a></li>
 				</ul>
 			</div>
 		</div>
@@ -160,9 +160,9 @@
 	<footer class="container">
 		<p class="pull-left">© 2016 Ceosim SpA</p>
 		<ul class="nav nav-pills pull-right">
-  			<li><a href="#"><i class="fa fa-facebook-official" aria-hidden="true"></i></a></li>
-  			<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-  			<li><a href="#"><span class="fa fa-youtube-play" aria-hidden="true"></span></a></li>
+  			<li><a href="https://www.facebook.com/ceosim.cl/" target="_blank"><i class="fa fa-facebook-official" aria-hidden="true"></i></a></li>
+  			<li><a href="https://twitter.com/CEOsim_Chile" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+  			<li><a href="https://www.youtube.com/channel/UC1C8wXqh3Mx_8Jm4WHG6-Yg" target="_blank"><span class="fa fa-youtube-play" aria-hidden="true"></span></a></li>
 		</ul>
 	</footer>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
