--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@
 			</div>
 		</div>
 	</section>
-	<section class="section" style="background-color:#742628">
+	<section id="boton" class="section">
 		<div class="container">
 			<div class="row text-center">
 				<p><a class="btn btn-primary btn-lg" role="button" href="https://goo.gl/forms/ri0RYAbp9lqlfvew1" target="_blank">Quiero ser un CEO</a></p>
-				<p class="lead" style="color:#FFF">Regístrate y sé el primero en recibir nuestra notificación para descargar la app gratis</p>
+				<p class="lead">Regístrate y sé el primero en recibir nuestra notificación para descargar la app gratis</p>
 			</div>
 		</div>
 	</section>
