Mover #features abajo

--- a/index.html
+++ b/index.html
@@ -99,7 +99,17 @@
 			</div>
 		</div>
 	</section>
-	<section id="features" class="section">
+	<section class="section container text-center">
+		<h2>Enfrenta las dificultades de dirigir una empresa <span class="text-muted">en distintos mercados y situaciones.</span></h2><br>
+		<img class="img-responsive center-block" alt="800x500" src="assets/images/desc_enfrenta.png"><br>
+
+		<h2>Compite <span class="text-muted">con otros usuarios.</span></h2><br>
+		<img class="img-responsive center-block" alt="800x500" src="assets/images/desc_compite.png"><br>
+
+		<h2>Y sé el <strong>líder</strong> de tu comunidad.</h2><br>
+		<img class="img-responsive center-block" alt="800x500" src="assets/images/desc_lider.png"><br>
+	</section>
+	<section id="features">
 		<div class="container">
 			<h2 class="text-center page-header">Podrás elaborar estrategias en las siguientes áreas:</h2>
 			<div class="row text-center">
@@ -126,16 +136,6 @@
 			</div>
 		</div>
 	</section>
-	<div class="container text-center">
-		<h2>Enfrenta las dificultades de dirigir una empresa <span class="text-muted">en distintos mercados y situaciones.</span></h2><br>
-		<img class="img-responsive center-block" alt="800x500" src="assets/images/desc_enfrenta.png"><br>
-
-		<h2>Compite <span class="text-muted">con otros usuarios.</span></h2><br>
-		<img class="img-responsive center-block" alt="800x500" src="assets/images/desc_compite.png"><br>
-
-		<h2>Y sé el <strong>líder</strong> de tu comunidad.</h2><br>
-		<img class="img-responsive center-block" alt="800x500" src="assets/images/desc_lider.png"><br>
-	</div>
 	<section class="section" id="social">
 		<div class="container">
 			<div class="row text-center">
