--- a/index.html
+++ b/index.html
@@ -99,7 +99,34 @@
 			</div>
 		</div>
 	</section>
-	<section class="section container text-center">
+	<section class="section" id="features">
+		<div class="container">
+			<h2 class="text-center page-header">Podrás elaborar estrategias en las siguientes áreas:</h2>
+			<div class="row text-center">
+				<div class="col-lg-3 col-sm-6">
+					<img class="img-icon" src="assets/images/f_comercial.png" alt="Estrategia Comercial">
+					<h3>Comercial</h3>
+					<p>Podrás crear tus estrategias de marketing, elaborar pronósticos de ventas, fijar el precio de los productos, generar presupuestos de promoción y distribución.</p>
+				</div>
+				<div class="col-lg-3 col-sm-6">
+					<img class="img-icon" src="assets/images/f_produccion.png" alt="Estrategia de Producción">
+					<h3>Producción</h3>
+					<p>Programa el número de productos que su empresa fabricará según el pronostico de ventas, gestiona los stock de inventarios y la capacidad de fabrica.</p>
+				</div>
+				<div class="col-lg-3 col-sm-6">
+					<img class="img-icon" src="assets/images/f_financiera.png" alt="Estrategia Financiera">
+					<h3>Finanzas</h3>
+					<p>Se asegura que la empresa tenga los fondos monetarios para operar, controla la liquidez de la empresa y si es necesario gestiona los prestamos bancarios para financiamiento, además, fija las políticas de cuentas por cobrar y cuentas por pagar.</p>
+				</div>
+				<div class="col-lg-3 col-sm-6">
+					<img class="img-icon" src="assets/images/f_id.png" alt="Estrategia de I+D">
+					<h3>I+D</h3>
+					<p>En este departamento podrás establecer presupuestos para todas las mejoras al producto, las cuales te llevarán a posicionar un producto atractivo para el mercado.</p>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="container text-center">
 		<h2>Enfrenta las dificultades de dirigir una empresa <span class="text-muted">en distintos mercados y situaciones.</span></h2><br>
 		<img class="img-responsive center-block" alt="800x500" src="assets/images/desc_enfrenta.png"><br>
 
@@ -108,33 +135,6 @@
 
 		<h2>Y sé el <strong>líder</strong> de tu comunidad.</h2><br>
 		<img class="img-responsive center-block" alt="800x500" src="assets/images/desc_lider.png"><br>
-	</section>
-	<section id="features">
-		<div class="container">
-			<h2 class="text-center page-header">Podrás elaborar estrategias en las siguientes áreas:</h2>
-			<div class="row text-center">
-				<div class="col-lg-3">
-					<img class="img-icon" src="assets/images/f_comercial.png" alt="Estrategia Comercial">
-					<h3>Comercial</h3>
-					<p>Podrás crear tus estrategias de marketing, elaborar pronósticos de ventas, fijar el precio de los productos, generar presupuestos de promoción y distribución.</p>
-				</div><!-- /.col-lg-4 -->
-				<div class="col-lg-3">
-					<img class="img-icon" src="assets/images/f_produccion.png" alt="Estrategia de Producción">
-					<h3>Producción</h3>
-					<p>Programa el número de productos que su empresa fabricará según el pronostico de ventas, gestiona los stock de inventarios y la capacidad de fabrica.</p>
-				</div><!-- /.col-lg-4 -->
-				<div class="col-lg-3">
-					<img class="img-icon" src="assets/images/f_financiera.png" alt="Estrategia Financiera">
-					<h3>Finanzas</h3>
-					<p>Se asegura que la empresa tenga los fondos monetarios para operar, controla la liquidez de la empresa y si es necesario gestiona los prestamos bancarios para financiamiento, además, fija las políticas de cuentas por cobrar y cuentas por pagar.</p>
-				</div><!-- /.col-lg-4 -->
-				<div class="col-lg-3">
-					<img class="img-icon" src="assets/images/f_id.png" alt="Estrategia de I+D">
-					<h3>I+D</h3>
-					<p>En este departamento podrás establecer presupuestos para todas las mejoras al producto, las cuales te llevarán a posicionar un producto atractivo para el mercado.</p>
-				</div><!-- /.col-lg-4 -->
-			</div>
-		</div>
 	</section>
 	<section class="section" id="social">
 		<div class="container">
