Cambiar texto botón registro

--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
 	<section id="boton" class="section">
 		<div class="container">
 			<div class="row text-center">
-				<p><a class="btn btn-primary btn-lg" role="button" href="https://goo.gl/forms/ri0RYAbp9lqlfvew1" target="_blank">Quiero ser un CEO</a></p>
-				<p class="lead">Regístrate y sé el primero en recibir nuestra notificación para descargar la app gratis</p>
+				<p><a class="btn btn-primary btn-lg" role="button" href="https://goo.gl/forms/ri0RYAbp9lqlfvew1" target="_blank">Regístrate</a></p>
+				<p class="lead">Al registrarte podrás ser el primero en recibir nuestra notificación para descargar la app gratis</p>
 			</div>
 		</div>
 	</section>
