Cambiar texto botón sup-derecha

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 	      </ul>
 	      <ul class="nav navbar-nav navbar-right header-button">
 	        <li>
-	          <button type="button" class="btn btn-default" onclick="window.open('https://goo.gl/forms/ri0RYAbp9lqlfvew1', '_blank')">¡Quiero ser un CEO!</button>
+	          <button type="button" class="btn btn-default" onclick="window.open('https://goo.gl/forms/ri0RYAbp9lqlfvew1', '_blank')">Regístrate</button>
 	        </li>
 	      </ul>
 	    </nav>
