--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 	<section id="inicio" class="section">
 		<div class="container">
 			<div class="row text-center">
-				<h1>¡CONVIÉRTETE EN UN CEO!</h1>
+				<h1 style="color:#8a2223;">¡CONVIÉRTETE EN UN CEO!</h1>
 				<p class="lead">Dirige a tu equipo, selecciona estrategias ganadoras para batir a la competencia y lleva a tu empresa a lo más alto.</p>
 			</div>
 			<div class="row">
