--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 		<div class="container">
 			<div class="row text-center">
 				<h1 style="color:#8a2223;">¡CONVIÉRTETE EN UN CEO!</h1>
-				<p class="lead">Dirige a tu equipo, selecciona estrategias ganadoras para batir a la competencia y lleva a tu empresa a lo más alto.</p>
+				<p class="lead" style="color:#ff7128;">Dirige a tu equipo, selecciona estrategias ganadoras para batir a la competencia y lleva a tu empresa a lo más alto.</p>
 			</div>
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2">
