--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
 	<section id="inicio" class="section">
 		<div class="container">
 			<div class="row text-center">
-				<h1 style="color:#8a2223;">¡CONVIÉRTETE EN UN CEO!</h1>
-				<p class="lead" style="color:#ff7128;">Dirige a tu equipo, selecciona estrategias ganadoras para batir a la competencia y lleva a tu empresa a lo más alto.</p>
+				<h1 class="titulo">¡CONVIÉRTETE EN UN CEO!</h1>
+				<p class="lead enfasis">Dirige a tu equipo, selecciona estrategias ganadoras para batir a la competencia y lleva a tu empresa a lo más alto.</p>
 			</div>
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2">
@@ -101,7 +101,7 @@
 	</section>
 	<section class="section" id="features">
 		<div class="container">
-			<h2 class="text-center page-header">Podrás elaborar estrategias en las siguientes áreas:</h2>
+			<h2 class="text-center page-header titulo">Podrás elaborar estrategias en las siguientes áreas:</h2>
 			<div class="row text-center">
 				<div class="col-lg-3 col-sm-6">
 					<img class="img-icon" src="assets/images/f_comercial.png" alt="Estrategia Comercial">
@@ -127,13 +127,13 @@
 		</div>
 	</section>
 	<section class="container text-center">
-		<h2>Enfrenta las dificultades de dirigir una empresa <span class="text-muted">en distintos mercados y situaciones.</span></h2><br>
+		<h2 class="titulo">Enfrenta las dificultades de dirigir una empresa <span class="text-muted">en distintos mercados y situaciones.</span></h2><br>
 		<img class="img-responsive center-block" alt="800x500" src="assets/images/desc_enfrenta.png"><br>
 
-		<h2>Compite <span class="text-muted">con otros usuarios.</span></h2><br>
+		<h2 class="titulo">Compite <span class="text-muted">con otros usuarios.</span></h2><br>
 		<img class="img-responsive center-block" alt="800x500" src="assets/images/desc_compite.png"><br>
 
-		<h2>Y sé el <strong>líder</strong> de tu comunidad.</h2><br>
+		<h2 class="titulo">Y sé el <strong>líder</strong> de tu comunidad.</h2><br>
 		<img class="img-responsive center-block" alt="800x500" src="assets/images/desc_lider.png"><br>
 	</section>
 	<section class="section" id="social">
