Cambio de posición video e iconos de app

--- a/index.html
+++ b/index.html
@@ -78,21 +78,21 @@
 	</header>
 	<section id="inicio" class="section">
 		<div class="container">
-			<div class="row text-center">
-				<h1 class="titulo">¡CONVIÉRTETE EN UN CEO!</h1>
-				<p class="lead enfasis">Dirige a tu equipo, selecciona estrategias ganadoras para batir a la competencia y lleva a tu empresa a lo más alto.</p>
-			</div>
-			<div class="row text-center">
-				<div class="icons_prox">
-					<h3>Proximamente en:</h3>
+			<div class="row section_principal">
+				<div class="row">
+					<h1 class="titulo t_principal">¡CONVIÉRTETE EN UN CEO!</h1>
 				</div>
-				<div class="icons_app">
-					<img class="icon_app" src="assets/images/d_google_play_prox.png" alt="Google Play">
-					<img class="icon_app" src="assets/images/d_app_store_prox.png" alt="App Store">
+				<div class="col-md-5 vcenter">
+					<p class="lead enfasis">Dirige a tu equipo, selecciona estrategias ganadoras para batir a la competencia y lleva a tu empresa a lo más alto.</p>
+					<div class="icons_prox">
+						<h3>Proximamente en:</h3>
+					</div>
+					<div class="icons_app">
+						<img class="icon_app" src="assets/images/d_google_play_prox.png" alt="Google Play">
+						<img class="icon_app" src="assets/images/d_app_store_prox.png" alt="App Store">
+					</div>
 				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-8 col-md-offset-2">
+				<div class="col-md-7">
 					<div class="embed-responsive embed-responsive-16by9">
 						<iframe src="https://www.youtube-nocookie.com/embed/JVTupiVprQY?rel=0&amp;showinfo=0" class="embed-responsive-item" frameborder="0" allowfullscreen></iframe>
 					</div>
