Cambio de posición del boton de registrarse

--- a/index.html
+++ b/index.html
@@ -76,20 +76,23 @@
 	    </nav>
 	  </div>
 	</header>
-	<section id="inicio" class="section">
+	<section id="inicio" class="section section_principal">
 		<div class="container">
-			<div class="row section_principal">
-				<div class="row">
+			<div class="row">
+				<div class="col-md-12 text-center">
 					<h1 class="titulo t_principal">¡CONVIÉRTETE EN UN CEO!</h1>
+					<p class="lead enfasis">Dirige a tu equipo, selecciona estrategias ganadoras para batir a la competencia y lleva a tu empresa a lo más alto.</p>
 				</div>
 				<div class="col-md-5 vcenter">
-					<p class="lead enfasis">Dirige a tu equipo, selecciona estrategias ganadoras para batir a la competencia y lleva a tu empresa a lo más alto.</p>
-					<div class="icons_prox">
-						<h3>Proximamente en:</h3>
-					</div>
+					<h3 class="titulo">Proximamente en:</h3>
 					<div class="icons_app">
 						<img class="icon_app" src="assets/images/d_google_play_prox.png" alt="Google Play">
 						<img class="icon_app" src="assets/images/d_app_store_prox.png" alt="App Store">
+					</div>
+					<hr>
+					<div>
+						<p class="lead titulo">Al registrarte podrás ser el primero en recibir nuestra notificación para descargar la app gratis</p>
+						<a class="btn btn_ceosim_primary" role="button" href="https://goo.gl/forms/ri0RYAbp9lqlfvew1" target="_blank">Regístrate</a>
 					</div>
 				</div>
 				<div class="col-md-7">
@@ -97,14 +100,6 @@
 						<iframe src="https://www.youtube-nocookie.com/embed/JVTupiVprQY?rel=0&amp;showinfo=0" class="embed-responsive-item" frameborder="0" allowfullscreen></iframe>
 					</div>
 				</div>
-			</div>
-		</div>
-	</section>
-	<section id="boton" class="section">
-		<div class="container">
-			<div class="row text-center">
-				<p><a class="btn btn-primary btn-lg" role="button" href="https://goo.gl/forms/ri0RYAbp9lqlfvew1" target="_blank">Regístrate</a></p>
-				<p class="lead">Al registrarte podrás ser el primero en recibir nuestra notificación para descargar la app gratis</p>
 			</div>
 		</div>
 	</section>
